fix(app): Sync warnings removed, landing header fixed

--- a/client/index.html
+++ b/client/index.html
@@ -29,7 +29,7 @@
 
   <!-- Main view  -->
   <div ui-view></div>
-
+  <script src="bower_components/angular/angular.min.js"></script>
   <!-- jQuery-->
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
   <script src="bower_components/jquery-ui/jquery-ui.min.js"></script>
@@ -41,7 +41,7 @@
   <script src="bower_components/moment/moment.js"></script>
 
   <!-- Angular Dependencies-->
-  <script src="bower_components/angular/angular.min.js"></script>
+
   <!--<script src="bower_components/angular-css/angular-css.min.js"></script>-->
   <script src="bower_components/angular-ui-router-styles/ui-router-styles.js"></script>
   <script src="bower_components/angular-ui-sortable/sortable.js"></script>
@@ -115,5 +115,9 @@
   <script src="components/contactList/contactList.ctrl.js"></script>
   <script src="components/documents/documents.ctrl.js"></script>
   <script src="components/documents/documents.compiled.js"></script>
+  <script src="bower_components/classie/classie.js"></script>
+  <script src="js/cbpAnimatedHeader.js"></script>
+  <script src="bower_components/WOW/dist/wow.min.js"></script>
+  <script src="js/landing.js"></script>
 </body>
 </html>
