--- a/client/landing.html
+++ b/client/landing.html
@@ -24,7 +24,7 @@
 <body id="page-top">
 <div class="landing-page">
 <div class="navbar-wrapper">
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-default navbar-fixed-top" id="newNav" role="navigation">
         <div class="container">
             <div class="navbar-header page-scroll">
                 <!--<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">-->
@@ -218,12 +218,12 @@
 </section>
 </div>
 
-<script src="bower_components/jquery/dist/jquery.min.js"></script>
-<script src="bower_components/pace/pace.min.js"></script>
-<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="bower_components/classie/classie.js"></script>
-<script src="js/cbpAnimatedHeader.js"></script>
-<script src="bower_components/WOW/dist/wow.min.js"></script>
-<script src="js/landing.js"></script>
+<!--<script src="bower_components/jquery/dist/jquery.min.js"></script>-->
+<!--<script src="bower_components/pace/pace.min.js"></script>-->
+<!--<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>-->
+<!--<script src="bower_components/classie/classie.js"></script>-->
+<!--<script src="js/cbpAnimatedHeader.js"></script>-->
+<!--<script src="bower_components/WOW/dist/wow.min.js"></script>-->
+<!--<script src="js/landing.js"></script>-->
 </body>
 </html>
