--- a/client/login.html
+++ b/client/login.html
@@ -15,7 +15,7 @@
 </head>
 <body class="gray-bg">
 
-  <div class="middle-box text-center loginscreen  animated fadeInDown">
+  <div class="middle-box text-center loginscreen">
     <div>
       <div>
         <ul class="logo-register-wrapper">
