dev(bower): adds new bower and grunt tasks

--- a/client/index.html
+++ b/client/index.html
@@ -114,7 +114,7 @@
   <script src="components/chat/chat.ctrl.js"></script>
   <script src="components/contactList/contactList.ctrl.js"></script>
   <script src="components/documents/documents.ctrl.js"></script>
-  <script src="components/documents/documents.compiled.js"></script>
+  <!--<script src="components/documents/documents.compiled.js"></script>-->
   <script src="bower_components/classie/classie.js"></script>
   <script src="js/cbpAnimatedHeader.js"></script>
   <script src="bower_components/WOW/dist/wow.min.js"></script>
