fix(landing): Fixes scrollspy

--- a/client/landing.html
+++ b/client/landing.html
@@ -35,7 +35,7 @@
                 <!--</button>-->
                 <div>
                     <div class="logo-landing-wrapper">
-                        <img src="img/equipp_icon_white.png" class="logo-landing"/>
+                        <!--<img src="img/equipp_icon_white.png" class="logo-landing"/>-->
                         <a class="navbar-brand" href="#"><span class="logo-text-landing">Equipp</span></a>
                     </div>
                 </div>
